<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btnsheet_login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:background="@drawable/toolbar_user" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/khebrat"
        android:text="@string/tripo"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/header">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardElevation="4dp"
                card_view:cardCornerRadius="15dp"
                card_view:contentPadding="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayout_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monadi"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayout_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:layout_alignStart="@+id/card_view"
                android:layout_alignLeft="@+id/card_view"
                android:layout_alignEnd="@+id/card_view"
                android:layout_alignRight="@+id/card_view"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/LightBlue"
                    android:fontFamily="@font/aniq"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:shapeAppearanceOverlay="@style/leaf" />

            </RelativeLayout>

            <TextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aniq"
                android:text="@string/or"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/login_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_or"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:id="@+id/facebook_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/gmail_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_google" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_icons"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/LightBlue"
                android:fontFamily="@font/aniq"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:shapeAppearanceOverlay="@style/leaf" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>